added to about me

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               I am a musician and web developer in USA looking for remote work.
               I enjoy learning new languages (including computer languages) and
               I enjoy learning about other cultures. I am proficient with HTML5,
-              CSS3, ES6, VS Code, Git, and React!
+              CSS3, ES6, VS Code, Git, Bootstrap, and React!
             </p>
           </div>
         </div>
