possibly solved equal height issue

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <h1>Recent Projects</h1>
         <hr />
         <div class="row container-fluid">
-          <div class="col-md">
+          <div class="col-md equals">
             <div class="project-tile">
               <a
                 href="https://reacting-with-weather-the-app.netlify.app"
@@ -108,7 +108,7 @@
               </a>
             </div>
           </div>
-          <div class="col-md">
+          <div class="col-md equals">
             <div class="project-tile">
               <a
                 href="https://product-landing-fcc-project.netlify.app"
@@ -123,7 +123,7 @@
               </a>
             </div>
           </div>
-          <div class="col-md">
+          <div class="col-md equals">
             <div class="project-tile">
               <a href="https://weatherappproject.netlify.app" target="_blank">
                 <img
