--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#projects-section">Projects</a>
+            <a class="nav-link" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact-section">Contact</a>
@@ -99,7 +99,7 @@
                 target="_blank"
               >
                 <img
-                  src="https://i.ibb.co/yBQTZ4T/React-Weather-App-Icon.png"
+                  src="https://i.ibb.co/MNyJvBf/React-Weather-App-Icon.png"
                   alt="React Weather App Icon"
                 />
                 <label for="React-Weather-App-Icon">
@@ -127,7 +127,7 @@
             <div class="project-tile">
               <a href="https://weatherappproject.netlify.app" target="_blank">
                 <img
-                  src="https://i.ibb.co/SXLqxXr/What-s-The-Weather.png"
+                  src="https://i.ibb.co/fkmNdGy/weather-App-IMG.png"
                   alt="Weather App icon"
                 />
                 <label for="weather-app-icon">
