--- a/index.html
+++ b/index.html
@@ -185,6 +185,10 @@
               <a href="mailto:kleinlikecalvin1@gmail.com" target="_blank"
                 ><button>Email ></button></a
               >
+
+              <a href="https://society6.com/streetlightkids" target="_blank"
+                ><button>Art ></button></a
+              >
             </div>
           </div>
         </div>
