--- a/index.html
+++ b/index.html
@@ -81,9 +81,7 @@
             <br />
             Aloha Honua.
           </h1>
-          <h2>
-            My name is Nikki and I'm a web developer.
-          </h2>
+          <h2>My name is Nikki and I'm a web developer.</h2>
         </div>
       </section>
       <!--End Welcome Section-->
@@ -92,7 +90,7 @@
         <h1>Recent Projects</h1>
         <hr />
         <div class="row container-fluid">
-          <div class="col-md equals">
+          <div class="col-md">
             <div class="project-tile">
               <a
                 href="https://reacting-with-weather-the-app.netlify.app"
@@ -102,13 +100,11 @@
                   src="https://i.ibb.co/MNyJvBf/React-Weather-App-Icon.png"
                   alt="React Weather App Icon"
                 />
-                <label for="React-Weather-App-Icon">
-                  React Weather App
-                </label>
+                <label for="React-Weather-App-Icon"> React Weather App </label>
               </a>
             </div>
           </div>
-          <div class="col-md equals">
+          <div class="col-md">
             <div class="project-tile">
               <a
                 href="https://product-landing-fcc-project.netlify.app"
@@ -123,16 +119,14 @@
               </a>
             </div>
           </div>
-          <div class="col-md equals">
+          <div class="col-md">
             <div class="project-tile">
               <a href="https://weatherappproject.netlify.app" target="_blank">
                 <img
                   src="https://i.ibb.co/fkmNdGy/weather-App-IMG.png"
                   alt="Weather App icon"
                 />
-                <label for="weather-app-icon">
-                  Weather App
-                </label>
+                <label for="weather-app-icon"> Weather App </label>
               </a>
             </div>
           </div>
@@ -149,9 +143,7 @@
       <section id="contact-section">
         <div class="row">
           <div class="col-md" id="about-me">
-            <h1>
-              About me
-            </h1>
+            <h1>About me</h1>
             <p>
               I am a musician and web developer in USA looking for remote work.
               I enjoy learning new languages (including computer languages) and
