updated css and added recent project

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <h1>Recent Projects</h1>
         <hr />
         <div class="row container-fluid">
-          <div class="col-md">
+          <div class="col-lg">
             <div class="project-tile">
               <a
                 href="https://reacting-with-weather-the-app.netlify.app"
@@ -104,22 +104,22 @@
               </a>
             </div>
           </div>
-          <div class="col-md">
+          <div class="col-lg">
             <div class="project-tile">
               <a
-                href="https://product-landing-fcc-project.netlify.app"
+                href="https://oc-billiards-bulletproof.netlify.app/bullet-html/bulletproof-index.html"
                 target="_blank"
                 ><img
-                  src="https://i.ibb.co/xFcchjP/Hamboards-Product-Landing-Page-Project.png"
-                  alt="Hamboards product landing page icon"
+                  src="./bulletproof-logo.png"
+                  alt="Bulletproof Enterprise Logo"
                 />
                 <label for="product-landing-page-icon">
-                  Product Landing Page
+                  Bulletproof Break Tips Site
                 </label>
               </a>
             </div>
           </div>
-          <div class="col-md">
+          <div class="col-lg">
             <div class="project-tile">
               <a href="https://weatherappproject.netlify.app" target="_blank">
                 <img
